--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "rimraf": "^5.0.7",
-    "undefined": "@expo/vector-icons/Ionicons"
+    "undefined": "@expo/vector-icons/Ionicons",
+    "validate.js": "^0.13.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.0"
   },
   "private": true
 }
